--- a/agora-angular/src/app/front-page/front-page.component.html
+++ b/agora-angular/src/app/front-page/front-page.component.html
@@ -14,23 +14,66 @@
             </div>
         </div>
     </div>
+    <div class="container d-flex flex-wrap align-items-center justify-content-center">
+        <div class="btn-group mx-2 mb-4">
+            <a href="#products" class="btn btn-primary frosted-glass">
+                <fa-icon [icon]="faChevronDown"></fa-icon>
+                Ajánlatok neked
+            </a>
+        </div>
+    </div>
 </div>
 
-<div class="container">
-    <div class="col-12 col-sm-6 col-md-5 col-lg-4 col-xl-3">
-        <div class="card card-product m-3 shadow">
-            <img src="assets/item2.jpg" class="card-img-top" alt="...">
-            <div class="card-body text-center">
-                <h5 class="card-title fw-bold">Termék neve</h5>
-                <p class="card-text text-primary m-1">Eladó neve</p>
-                <h4 class="m-0 fw-bold">2 599 Ft</h4>
-            </div>
-            <div class="btn-group mx-2 mb-3">
-                <a href="#" class="btn btn-primary w-75">Részletek</a>
-                <a href="#" class="btn btn-secondary w-25">
-                    <fa-icon [icon]="faShoppingCart"></fa-icon>
-                </a>
+<div id="products" class="container">
+    <h2 class="main-header fw-bold mt-4">Ajánlatok neked</h2>
+    <div class="row">
+        <div *ngFor="let product of products" class="col-12 col-sm-6 col-md-5 col-lg-4 col-xl-3">
+            <div class="card card-product m-3 shadow">
+                <div class="img-placeholder ">
+                    <img src="{{product.imgUrl}}" class="card-img-top img-product" alt="...">
+                </div>
+                <div class="card-body card-body-product text-center">
+                    <h5 class="card-title fw-bold" [class.fit-text]="product.productName.length> 20">{{product.productName}}</h5>
+                    <p class="card-text text-primary m-1">{{product.sellerName}}</p>
+                    <h4 class="m-0 fw-bold">{{product.price}} Ft</h4>
+                </div>
+                <div class="btn-group mx-2 mb-3">
+                    <a href="#" class="btn btn-primary w-75">Részletek</a>
+                    <a href="#" class="btn btn-secondary w-25">
+                        <fa-icon [icon]="faShoppingCart"></fa-icon>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
 </div>
+
+<footer class="container-fluid py-5 border-top">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-md">
+              <small class="d-block mb-3 text-muted">Agora &copy;2021</small>
+            </div>
+            <div class="col-6 col-md">
+              <h5 class="fw-bold">Linkek</h5>
+              <ul class="list-unstyled text-small">
+                <li><a class="link-secondary text-decoration-none" href="#">Kezdőlap</a></li>
+                <li><a class="link-secondary text-decoration-none" href="#">Kategóriák</a></li>
+                <li><a class="link-secondary text-decoration-none" href="#">A szezon legjobbjai</a></li>
+                <li><a class="link-secondary text-decoration-none" href="#">Rólunk</a></li>
+                <li><a class="link-secondary text-decoration-none" href="#">Újdonságok</a></li>
+                <li><a class="link-secondary text-decoration-none" href="#">Hírlevél</a></li>
+              </ul>
+            </div>
+            <div class="col-6 col-md">
+              <h5 class="fw-bold">Fiók</h5>
+              <ul class="list-unstyled text-small">
+                <li><a class="link-secondary text-decoration-none" href="#">Bejelentkezés</a></li>
+                <li><a class="link-secondary text-decoration-none" href="#">Regisztráció</a></li>
+                <li><a class="link-secondary text-decoration-none" href="#">Eladó regisztráció</a></li>
+                <li><a class="link-secondary text-decoration-none" href="#">Eladói fórum</a></li>
+              </ul>
+            </div>
+          </div>
+    </div>
+  </footer>
