--- a/agora-angular/src/app/front-page/front-page.component.scss
+++ b/agora-angular/src/app/front-page/front-page.component.scss
@@ -1,7 +1,3 @@
-.card-product{
-    width: 16rem;
-    height: 26.5rem;
-}
 .slogen{
     font-family: 'Bellota', cursive;
     font-weight: bold;
@@ -9,6 +5,7 @@
 .container-front{
     background-image: url("./../../assets/salad.jpg");
     background-position: center;
+    background-attachment: fixed;
 }
 .search{
     background: inherit;
@@ -23,4 +20,35 @@
     border-right: none;
     border-width: .15rem;
     border-color: #342A2B;
+}
+h2.main-header{
+    font-variant: small-caps;
+    font-family: 'IM Fell English', serif;
+}
+a.frosted-glass:hover{
+    border: none;
+  background-color: rgba(255, 255, 255, .25);
+  backdrop-filter: blur(10px);
+}
+
+//product cards
+
+$card-product-width: 16rem;
+$card-product-height: 28rem;
+
+.card-product{
+    width: $card-product-width;
+    height: $card-product-height;
+}
+.img-placeholder{
+    height: $card-product-width;
+}
+.card-body-product{
+    height: $card-product-height / 3;
+}
+.img-product{
+    max-height: $card-product-width;
+}
+.fit-text{
+    font-size: 1rem;
 }
