--- a/agora-angular/src/app/nav/nav.component.html
+++ b/agora-angular/src/app/nav/nav.component.html
@@ -7,7 +7,7 @@
 
         <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
             <li><a (click)="toggleCategory()" [class.selected]="isOpen" href="#" class="nav-link px-2 link-dark">Kategóriák</a></li>
-            <li><a href="#" class="nav-link px-2 link-dark">A szezon legjobbjai</a></li>
+            <li><a href="#products" class="nav-link px-2 link-dark">A szezon legjobbjai</a></li>
             <li><a href="#" class="nav-link px-2 link-dark">Rólunk</a></li>
         </ul>
 
