--- a/agora-angular/src/app/nav/nav.component.html
+++ b/agora-angular/src/app/nav/nav.component.html
@@ -1,4 +1,4 @@
-<div class="">
+<div>
     <header class="container d-flex flex-wrap align-items-center justify-content-center justify-content-md-between pt-3 mb-3">
         <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
             <img src="assets/logo.svg" class="me-2 logo-img" height="32" alt="">
@@ -6,9 +6,9 @@
         </a>
 
         <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-            <li><a (click)="toggleCategory()" [class.selected]="isOpen" href="#" class="nav-link px-2 link-dark">Kategóriák</a></li>
+            <li><a (click)="toggleCategory()" [class.selected]="isOpen" href="#" class="nav-link-selectable nav-link px-2 link-dark">Kategóriák</a></li>
             <li><a href="#products" class="nav-link px-2 link-dark">A szezon legjobbjai</a></li>
-            <li><a href="#" class="nav-link px-2 link-dark">Rólunk</a></li>
+            <li><a (click)="toggleNowView()" href="#" [@clickNowView]="isNowOpen ? 'nowOpen' : 'nowClosed'" href="#" class="nav-link-selectable nav-link px-2 link-dark">Most</a></li>
         </ul>
 
         <div class="col-md-3 text-end">
@@ -17,38 +17,70 @@
         </div>
     </header>
 </div>
-<div @toggleCategory *ngIf="isOpen" class="shadow">
+<div @toggleCategory *ngIf="isOpen">
     <div class="col-12 container pb-4">
         <div class="row">
-            <div class="col-6 col-md-3 col-lg-2 mb-2">
-                <div class="card card-category">
+            <div class="col-6 col-md-3 col-lg-2 mb-3">
+                <div class="card card-category-produce">
                     <div class="hstack gap-2 card-body mx-auto">
                         <fa-icon [icon]="faCarrot"></fa-icon>
                         <p class="card-text m-0">Zöldség</p>
                     </div>
                 </div>
             </div>
-            <div class="col-6 col-md-3 col-lg-2 mb-2">
-                <div class="card card-category">
+            <div class="col-6 col-md-3 col-lg-2 mb-3">
+                <div class="card card-category-produce">
                     <div class="hstack gap-2 card-body mx-auto">
                         <fa-icon [icon]="faApple"></fa-icon>
                         <p class="card-text m-0">Gyümölcs</p>
                     </div>
                 </div>
             </div>
-            <div class="col-6 col-md-3 col-lg-2 mb-2">
-                <div class="card card-category">
+            <div class="col-6 col-md-3 col-lg-2 mb-3">
+                <div class="card card-category-produce">
                     <div class="hstack gap-2 card-body mx-auto">
                         <fa-icon [icon]="faBread"></fa-icon>
                         <p class="card-text m-0">Pékáru</p>
                     </div>
                 </div>
             </div>
-            <div class="col-6 col-md-3 col-lg-2 mb-2">
-                <div class="card card-category">
+            <div class="col-6 col-md-3 col-lg-2 mb-3">
+                <div class="card card-category-produce">
                     <div class="hstack gap-2 card-body mx-auto">
                         <fa-icon [icon]="faCheese"></fa-icon>
                         <p class="card-text m-0">Tejtermék</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 col-md-3 col-lg-2 mb-3">
+                <div class="card card-category-produce">
+                    <div class="hstack gap-2 card-body mx-auto">
+                        <fa-icon [icon]="faGlassMartiniAlt"></fa-icon>
+                        <p class="card-text m-0">Italok</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 col-md-3 col-lg-2 mb-3">
+                <div class="card card-category-product">
+                    <div class="hstack gap-2 card-body mx-auto">
+                        <fa-icon [icon]="faGem"></fa-icon>
+                        <p class="card-text m-0">Ékszer</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 col-md-3 col-lg-2 mb-3">
+                <div class="card card-category-product">
+                    <div class="hstack gap-2 card-body mx-auto">
+                        <fa-icon [icon]="faPalette"></fa-icon>
+                        <p class="card-text m-0">Művészet</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 col-md-3 col-lg-2 mb-3">
+                <div class="card card-category-product">
+                    <div class="hstack gap-2 card-body mx-auto">
+                        <fa-icon [icon]="faTshirt"></fa-icon>
+                        <p class="card-text m-0">Divat</p>
                     </div>
                 </div>
             </div>
