--- a/agora-angular/src/app/nav/nav.component.html
+++ b/agora-angular/src/app/nav/nav.component.html
@@ -6,9 +6,9 @@
         </a>
 
         <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-            <li><a (click)="toggleCategory()" [class.selected]="isOpen" href="#" class="nav-link-selectable nav-link px-2 link-dark">Kategóriák</a></li>
-            <li><a href="#products" class="nav-link px-2 link-dark">A szezon legjobbjai</a></li>
-            <li><a (click)="toggleNowView()" href="#" [@clickNowView]="isNowOpen ? 'nowOpen' : 'nowClosed'" href="#" class="nav-link-selectable nav-link px-2 link-dark">Most</a></li>
+            <li><a (click)="toggleCategory()" [class.selected]="openView == 'category'" href="#" class="nav-link-selectable nav-link px-2 link-dark">Kategóriák</a></li>
+            <li><a (click)="toggleBestView()" [class.selected]="openView == 'best' "href="#" class="nav-link-selectable nav-link px-2 link-dark">A szezon legjobbjai</a></li>
+            <li><a (click)="toggleNowView()" [class.selected]="openView == 'now' "href="#" class="nav-link-selectable nav-link px-2 link-dark">Most</a></li>
         </ul>
 
         <div class="col-md-3 text-end">
@@ -17,70 +17,100 @@
         </div>
     </header>
 </div>
-<div @toggleCategory *ngIf="isOpen">
-    <div class="col-12 container pb-4">
-        <div class="row">
-            <div class="col-6 col-md-3 col-lg-2 mb-3">
-                <div class="card card-category-produce">
-                    <div class="hstack gap-2 card-body mx-auto">
-                        <fa-icon [icon]="faCarrot"></fa-icon>
-                        <p class="card-text m-0">Zöldség</p>
+<div [ngSwitch]="openView">
+    <div @toggleMenu *ngSwitchCase="'category'">  
+        <div class="col-12 container pb-4">
+            <div class="row">
+                <div class="col-6 col-md-3 col-lg-2 mb-3">
+                    <div class="card card-category-produce">
+                        <div class="hstack gap-2 card-body mx-auto">
+                            <fa-icon [icon]="faCarrot"></fa-icon>
+                            <p class="card-text m-0">Zöldség</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-md-3 col-lg-2 mb-3">
+                    <div class="card card-category-produce">
+                        <div class="hstack gap-2 card-body mx-auto">
+                            <fa-icon [icon]="faApple"></fa-icon>
+                            <p class="card-text m-0">Gyümölcs</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-md-3 col-lg-2 mb-3">
+                    <div class="card card-category-produce">
+                        <div class="hstack gap-2 card-body mx-auto">
+                            <fa-icon [icon]="faBread"></fa-icon>
+                            <p class="card-text m-0">Pékáru</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-md-3 col-lg-2 mb-3">
+                    <div class="card card-category-produce">
+                        <div class="hstack gap-2 card-body mx-auto">
+                            <fa-icon [icon]="faCheese"></fa-icon>
+                            <p class="card-text m-0">Tejtermék</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-md-3 col-lg-2 mb-3">
+                    <div class="card card-category-produce">
+                        <div class="hstack gap-2 card-body mx-auto">
+                            <fa-icon [icon]="faGlassMartiniAlt"></fa-icon>
+                            <p class="card-text m-0">Italok</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-md-3 col-lg-2 mb-3">
+                    <div class="card card-category-product">
+                        <div class="hstack gap-2 card-body mx-auto">
+                            <fa-icon [icon]="faGem"></fa-icon>
+                            <p class="card-text m-0">Ékszer</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-md-3 col-lg-2 mb-3">
+                    <div class="card card-category-product">
+                        <div class="hstack gap-2 card-body mx-auto">
+                            <fa-icon [icon]="faPalette"></fa-icon>
+                            <p class="card-text m-0">Művészet</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-md-3 col-lg-2 mb-3">
+                    <div class="card card-category-product">
+                        <div class="hstack gap-2 card-body mx-auto">
+                            <fa-icon [icon]="faTshirt"></fa-icon>
+                            <p class="card-text m-0">Divat</p>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-6 col-md-3 col-lg-2 mb-3">
-                <div class="card card-category-produce">
-                    <div class="hstack gap-2 card-body mx-auto">
-                        <fa-icon [icon]="faApple"></fa-icon>
-                        <p class="card-text m-0">Gyümölcs</p>
+        </div>
+    </div>
+    <div @toggleMenu *ngSwitchCase="'now'">  
+        <div class="col-12 container pb-4">
+            <div class="row">
+                <div class="col-6 col-md-3 col-lg-2 mb-3">
+                    <div class="card card-category-produce">
+                        <div class="hstack gap-2 card-body mx-auto">
+                            <fa-icon [icon]="faCarrot"></fa-icon>
+                            <p class="card-text m-0">Zöldség</p>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-6 col-md-3 col-lg-2 mb-3">
-                <div class="card card-category-produce">
-                    <div class="hstack gap-2 card-body mx-auto">
-                        <fa-icon [icon]="faBread"></fa-icon>
-                        <p class="card-text m-0">Pékáru</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-6 col-md-3 col-lg-2 mb-3">
-                <div class="card card-category-produce">
-                    <div class="hstack gap-2 card-body mx-auto">
-                        <fa-icon [icon]="faCheese"></fa-icon>
-                        <p class="card-text m-0">Tejtermék</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-6 col-md-3 col-lg-2 mb-3">
-                <div class="card card-category-produce">
-                    <div class="hstack gap-2 card-body mx-auto">
-                        <fa-icon [icon]="faGlassMartiniAlt"></fa-icon>
-                        <p class="card-text m-0">Italok</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-6 col-md-3 col-lg-2 mb-3">
-                <div class="card card-category-product">
-                    <div class="hstack gap-2 card-body mx-auto">
-                        <fa-icon [icon]="faGem"></fa-icon>
-                        <p class="card-text m-0">Ékszer</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-6 col-md-3 col-lg-2 mb-3">
-                <div class="card card-category-product">
-                    <div class="hstack gap-2 card-body mx-auto">
-                        <fa-icon [icon]="faPalette"></fa-icon>
-                        <p class="card-text m-0">Művészet</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-6 col-md-3 col-lg-2 mb-3">
-                <div class="card card-category-product">
-                    <div class="hstack gap-2 card-body mx-auto">
-                        <fa-icon [icon]="faTshirt"></fa-icon>
-                        <p class="card-text m-0">Divat</p>
+        </div>
+    </div>
+    <div @toggleMenu *ngSwitchCase="'best'">  
+        <div class="col-12 container pb-4">
+            <div class="row">
+                <div class="col-6 col-md-3 col-lg-2 mb-3">
+                    <div class="card card-category-product">
+                        <div class="hstack gap-2 card-body mx-auto">
+                            <fa-icon [icon]="faTshirt"></fa-icon>
+                            <p class="card-text m-0">Divat</p>
+                        </div>
                     </div>
                 </div>
             </div>
