termék részletek oldal #2

--- a/agora-angular/src/app/nav/nav.component.scss
+++ b/agora-angular/src/app/nav/nav.component.scss
@@ -25,6 +25,7 @@
 }
 .btn-sell{
     font-size: .9rem;
+    border-radius: .6rem;
 }
 .btn-login{
     font-size: .9rem;
@@ -34,4 +35,5 @@
 .btn-login:hover, .btn-sell:hover{
     background-color: #342A2B;
     color: #fffff4;
+    border-radius: .6rem;
 }
