--- a/agora-angular/src/app/product-list/product-list.component.html
+++ b/agora-angular/src/app/product-list/product-list.component.html
@@ -9,7 +9,7 @@
             <h4 class="m-0 fw-bold">{{product.price}} Ft</h4>
         </div>
         <div class="btn-group mx-2 mb-3">
-            <a href="#" class="btn btn-primary w-75">Részletek</a>
+            <a href="/product-details" class="btn btn-primary w-75">Részletek</a>
             <a href="#" class="btn btn-secondary w-25">
                 <fa-icon [icon]="faShoppingCart"></fa-icon>
             </a>
