--- a/agora-angular/src/styles.scss
+++ b/agora-angular/src/styles.scss
@@ -52,3 +52,6 @@ $card-border-color: null;
   background-color: rgba(255, 255, 255, .15);
   backdrop-filter: blur(10px);
 }
+div.shadow.rounded{
+  background-color: #fbf7f5;
+}
