--- a/agora-angular/src/app/nav/nav.component.html
+++ b/agora-angular/src/app/nav/nav.component.html
@@ -12,7 +12,7 @@
         </ul>
 
         <div class="col-md-3 text-end">
-            <a href="" class="btn p-1 m-1 btn-sell">Eladok</a>
+            <a href="/signup-vendor" class="btn p-1 m-1 btn-sell">Eladok</a>
             <a href="/login" class="btn p-1 m-1 btn-login">Belépés</a>
         </div>
     </header>
