--- a/agora-angular/src/app/product-detail/product-detail.component.html
+++ b/agora-angular/src/app/product-detail/product-detail.component.html
@@ -168,35 +168,7 @@
     <h3 class="m-3 pt-2">További ajánlatok</h3>
     <app-product-list class="row" [products]="products"></app-product-list>
 </div>
-<footer class="container-fluid py-5 border-top">
-    <div class="container">
-        <div class="row">
-            <div class="col-12 col-md">
-                <small class="d-block mb-3 text-muted">Agora &copy;2021</small>
-            </div>
-            <div class="col-6 col-md">
-                <h5 class="fw-bold">Linkek</h5>
-                <ul class="list-unstyled text-small">
-                    <li><a class="link-secondary text-decoration-none" href="#">Kezdőlap</a></li>
-                    <li><a class="link-secondary text-decoration-none" href="#">Kategóriák</a></li>
-                    <li><a class="link-secondary text-decoration-none" href="#">A szezon legjobbjai</a></li>
-                    <li><a class="link-secondary text-decoration-none" href="#">Rólunk</a></li>
-                    <li><a class="link-secondary text-decoration-none" href="#">Újdonságok</a></li>
-                    <li><a class="link-secondary text-decoration-none" href="#">Hírlevél</a></li>
-                </ul>
-            </div>
-            <div class="col-6 col-md">
-                <h5 class="fw-bold">Fiók</h5>
-                <ul class="list-unstyled text-small">
-                    <li><a class="link-secondary text-decoration-none" href="#">Bejelentkezés</a></li>
-                    <li><a class="link-secondary text-decoration-none" href="#">Regisztráció</a></li>
-                    <li><a class="link-secondary text-decoration-none" href="#">Eladó regisztráció</a></li>
-                    <li><a class="link-secondary text-decoration-none" href="#">Eladói fórum</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</footer>
+<page-footer></page-footer>
 <!-- Review detailed views -->
 <modal-window [(modalVisible)]="modalVisible">
     <app-review [(content)]="reviewContent"></app-review>
