--- a/agora-angular/src/app/my-profile/edit-profile/edit-profile.component.html
+++ b/agora-angular/src/app/my-profile/edit-profile/edit-profile.component.html
@@ -20,7 +20,7 @@
                     <div class="d-grid gap-1 d-flex justify-content-end mb-2">
                        <form action="" method="get">
                         <div class="btn-group">
-                            <a href="/profile" class="btn btn-primary my-2 px-2">Mentés</a>
+                            <a href="/my-profile" class="btn btn-primary my-2 px-2">Mentés</a>
                             
                         </div>
                        </form>
