--- a/agora-angular/src/app/product-detail/product-detail.component.html
+++ b/agora-angular/src/app/product-detail/product-detail.component.html
@@ -108,7 +108,7 @@
                                     <img src="assets/profilepic.jpg" class="round img-fluid">
                                 </div>
                                 <div class="col-8">
-                                    <h5><a href="/profile" class="text-decoration-none fw-bold">Nagy Erzsébet</a></h5>
+                                    <h5><a href="/profile" class="text-decoration-none fw-bold">{{productDetail.seller}}</a></h5>
                                     <div class="btn-group">
                                         <a href="#" class="btn btn-primary my-2 px-3">Követés</a>
                                         <a href="#" class="btn btn-secondary my-2 pe-3">
@@ -119,8 +119,7 @@
                             </div>
                             <div class="row">
                                 <p class="mt-3">
-                                    Sziasztok, Aranyoskák! Erzsi néni vagyok. Szabadidőmben szeretek ékszereket és egyéb
-                                    apróságokat készíteni. ✨💎
+                                    {{productDetail.sellerDescription}}
                                 </p>
                             </div>
                             <div class="row">
