--- a/agora-angular/src/app/product-list/product-list.component.html
+++ b/agora-angular/src/app/product-list/product-list.component.html
@@ -15,5 +15,5 @@
             </a>
         </div>
     </div> -->
-    <product-card [name]=product.name [sller]=product.seller [imgUrl]="" [price]=product.price></product-card>
+    <product-card [name]=product.name [seller]=product.seller [imgUrl]=product.imgUrl [price]=product.price ></product-card>
 </div>
