--- a/agora-angular/src/app/my-profile/product-form/product-form.component.html
+++ b/agora-angular/src/app/my-profile/product-form/product-form.component.html
@@ -5,11 +5,11 @@
             <form [formGroup]="productForm" (ngSubmit)="onSubmit()">
                 <div class="mb-3">
                     <label for="name" class="form-label mb-1">Termék megnevezése</label>
-                    <input type="text" class="form-control" formControlName="name" id="name">
+                    <input type="text" class="form-control" formControlName="name" id="name" [(ngModel)]="model.name">
                 </div>
                 <div class="mb-3">
                     <label for="price" class="form-label mb-1">Ár <small>(HUF)</small></label>
-                    <input type="number" class="form-control" formControlName="price" id="price">
+                    <input type="number" class="form-control" formControlName="price" id="price" [(ngModel)]="model.price">
                 </div>
                 <div class="mb-3">
                     <label for="discount" class="form-label mb-1">Kedvezmény</label>
@@ -59,22 +59,7 @@
             </form>
         </div>
         <div class="col-12 col-md-4">
-            <div class="card card-product m-3 shadow">
-                <div class="img-placeholder ">
-                    <img src="" class="card-img-top img-product" alt="...">
-                </div>
-                <div class="card-body card-body-product text-center">
-                    <h5 class="card-title fw-bold">{{model.name}}</h5>
-                    <p class="card-text text-primary m-1"></p>
-                    <h4 class="m-0 fw-bold">{{model.price}} Ft</h4>
-                </div>
-                <div class="btn-group mx-2 mb-3">
-                    <a href="/product-details" class="btn btn-primary w-75">Részletek</a>
-                    <a href="#" class="btn btn-secondary w-25">
-                        <!-- <fa-icon [icon]="faShoppingCart"></fa-icon> -->
-                    </a>
-                </div>
-            </div>
+            <product-card [name]="model.name" [seller]=model.seller [imgUrl]=model.imgUrl [price]=model.price ></product-card>
         </div>
     </div>
 </div>
