--- a/agora-angular/src/app/profile-page/profile-page.component.html
+++ b/agora-angular/src/app/profile-page/profile-page.component.html
@@ -1,13 +1,13 @@
-<div class="p-0 container-fluid header"></div>
+<div class="p-0 container-fluid header" style="background-image: url('../../{{user.headerImgUrl}}');"></div>
 <div class="container mt-5">
     <div class="d-grid justify-content-md-center">
         <div class="round profile-picture ms-4 bg-white shadow">
-            <img class="p-2 round profile-picture" src="assets/profilepic.jpg" alt="">
+            <img class="p-2 round profile-picture" src="{{user.profileImgUrl}}" alt="">
         </div>
         <div class="shadow rounded px-4 pt-5 pb-2 about">
             <div class="row">
                 <div class="col-7 col-md-5">
-                    <h4 class="fw-bold m-2">Nagy Erzsébet</h4>
+                    <h4 class="fw-bold m-2">{{user.name}}</h4>
                 </div>
                 <div class="col-5 col-md-7">
                     <div class="d-grid gap-1 d-flex justify-content-end mb-2">
@@ -23,32 +23,31 @@
             <div class="row justify-content-start">
                 <div class="m-2 mt-0 pt-0 col-auto">
                     <fa-icon class="pe-2" [icon]="faLink"></fa-icon>
-                    <a href="" class="text-decoration-none">erzsiekszer.hu </a>
+                    <a href="" class="text-decoration-none">{{user.website}}</a>
                 </div>
                 <div class="m-2 mt-0 pt-0 col-auto">
                     <fa-icon class="pe-2" [icon]="faLocationArrow"></fa-icon>
-                    Nagybajcs
+                    {{user.siteLocation}}
                 </div>
                 <div class="m-2 mt-0 pt-0 col-auto">
                     <fa-icon class="pe-2" [icon]="faCalendar"></fa-icon>
-                    Csatlakozott: 2021 nov.
+                    {{user.registeredAt|date}}
                 </div>
             </div>
             <div class="row">
                 <div class="col-5 col-md-3 col-lg-2">
-                    <h5 class="fw-bold m-2">54 <small class="fw-normal">követő</small></h5>
+                    <h5 class="fw-bold m-2">{{user.followers}} <small class="fw-normal">követő</small></h5>
                 </div>
                 <div class="col-5 col-md-3 col-lg-2">
-                    <h5 class="fw-bold m-2">16 <small class="fw-normal">követ</small></h5>
+                    <h5 class="fw-bold m-2">{{user.follows}} <small class="fw-normal">követ</small></h5>
                 </div>
             </div>
             <div class="row">
                 <p class="mt-3">
-                    Sziasztok, Aranyoskák! Erzsi néni vagyok. Szabadidőmben szeretek ékszereket és egyéb
-                    apróságokat készíteni. ✨💎
+                    {{user.about}}
                 </p>
             </div>
-            <div class="row">
+            <div *ngIf="user.takesCustomOrders" class="row">
                 <hr>
                 <p>Egyedi rendeléseket is vállal.
                     <a href="#" class="text-decoration-none">Tudj meg többet.</a>
