--- a/agora-angular/src/app/product-detail/product-detail.component.html
+++ b/agora-angular/src/app/product-detail/product-detail.component.html
@@ -28,7 +28,7 @@
                 <h1 class="my-3">{{productDetail.name}}</h1>
                 <div class="row">
                     <div class="col-12 col-lg-6 m-2">
-                        <h1 class="fw-bold">{{productDetail.price|currency:"HUF ":"symbol"}}</h1>
+                        <h1 class="fw-bold">{{productDetail.price|price}}</h1>
                         <p class="m-2">Elérhető: {{productDetail.inventory}}db</p>
                     </div>
                     <div class="col-12 col-lg-6 my-2">
