--- a/agora-angular/src/app/product-list/product-card/product-card.component.html
+++ b/agora-angular/src/app/product-list/product-card/product-card.component.html
@@ -8,7 +8,7 @@
     <div class="card-body card-body-product text-center">
         <h5 class="card-title fw-bold" [class.fit-text]="name.length> 20">{{name}}</h5>
         <p class="card-text text-primary m-1">{{seller}}</p>
-        <h4 class="m-0 fw-bold">{{price | currency:"HUF":"symbol"}}</h4>
+        <h4 class="m-0 fw-bold">{{price | price}}</h4>
     </div>
     <div class="btn-group mx-2 mb-3">
         <a href="/product-details" class="btn btn-primary w-75">Részletek</a>
