--- a/agora-angular/src/styles.scss
+++ b/agora-angular/src/styles.scss
@@ -11,6 +11,7 @@ $primary: #859C62;
 $secondary: #c0c0c0;
 $danger: #ff8b94;
 $success: #a0d6b4;
+$dark: #342A2B;
 $body-color: #342A2B;
 $body-bg: #fffff4;
 $border-radius: 1rem;
