--- a/agora-angular/src/app/search/search.component.html
+++ b/agora-angular/src/app/search/search.component.html
@@ -9,9 +9,12 @@
             </div>
         </div>
         <div class="col-12 col-md-8">
-            <div class="rounded shadow">
-                <h1>Items</h1>
+            <div class="rounded shadow p-2">
+                <h1 class="m-3">Termékek</h1>
+                <hr class="m-2">
+                <app-product-list [products]="products" class="row"></app-product-list>
             </div>
         </div>
     </div>
 </div>
+<page-footer></page-footer>
